[gd_scene load_steps=39 format=2]

[ext_resource path="res://Fonts/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Scripts/Login and Register/EmailValidateLabel.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Scripts/Login and Register/LoginClickText.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Scripts/Login and Register/CreateAccountBtn.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Register Page Scenes/EmailVerfication.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Register Page Scenes/CreateParentAccountScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Scripts/Login and Register/PasswordMatchLabel.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Scripts/Login and Register/DoBValidateLabel.gd" type="Script" id=10]
[ext_resource path="res://Styles/Button Style Disabled.tres" type="StyleBox" id=11]
[ext_resource path="res://Styles/Button Style.tres" type="StyleBox" id=12]
[ext_resource path="res://Styles/Unchecked Box.tres" type="Texture" id=13]
[ext_resource path="res://Styles/Button Style Pressed.tres" type="StyleBox" id=14]
[ext_resource path="res://Styles/Button Style Hover.tres" type="StyleBox" id=15]
[ext_resource path="res://Assets/Register Page/RegisterBackground.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=2]
size = 31
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0, 0.482353, 0.678431, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=8]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="DynamicFont" id=9]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=29]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[node name="RegisterScreen" type="Node2D"]

[node name="RegisterBackground" type="Sprite" parent="."]
position = Vector2( 223, 409 )
texture = ExtResource( 16 )

[node name="RichTextLabel" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.64
margin_top = -343.944
margin_right = 122.36
margin_bottom = -303.944
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Create new account"

[node name="RichTextLabel2" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.809
margin_top = -283.682
margin_right = 21.191
margin_bottom = -261.682
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Already have an Account ?"

[node name="LoginClickText" type="Button" parent="RegisterBackground"]
margin_left = 32.4917
margin_top = -284.947
margin_right = 80.4917
margin_bottom = -262.947
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 14 )
text = "Log in"
script = ExtResource( 5 )

[node name="EmailInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -178.808
margin_top = -214.943
margin_right = 181.192
margin_bottom = -164.943
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 23 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Email"
placeholder_alpha = 0.3

[node name="NameInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.725
margin_top = -130.944
margin_right = 182.275
margin_bottom = -80.9432
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Display Name"
placeholder_alpha = 0.3

[node name="PasswordInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.874
margin_top = -46.1459
margin_right = 182.126
margin_bottom = 3.85413
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 7 )
secret = true
placeholder_text = "Create Password"
placeholder_alpha = 0.3

[node name="ConfirmInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.727
margin_top = 40.0568
margin_right = 182.273
margin_bottom = 90.0568
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 26 )
custom_styles/normal = SubResource( 7 )
secret = true
placeholder_text = "Confirm Password"
placeholder_alpha = 0.3

[node name="DoBInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.727
margin_top = 126.057
margin_right = 182.273
margin_bottom = 176.057
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 27 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Date of Birth (MM/DD/YYYY)"
placeholder_alpha = 0.3

[node name="ToCCheckBox" type="CheckBox" parent="RegisterBackground"]
margin_left = -183.283
margin_top = 205.435
margin_right = -159.283
margin_bottom = 229.435
custom_fonts/font = SubResource( 8 )
custom_icons/unchecked = ExtResource( 13 )
custom_styles/hover = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
clip_text = true

[node name="CreateAccountBtn" type="Button" parent="RegisterBackground"]
margin_left = -176.76
margin_top = 271.058
margin_right = 183.24
margin_bottom = 321.058
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 14 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
disabled = true
text = "Create account"
script = ExtResource( 6 )

[node name="RichTextLabel3" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -156.123
margin_top = 205.402
margin_right = 178.877
margin_bottom = 239.402
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "I have read and accept the Terms and Conditions and Privacy Policy."

[node name="RichTextLabel4" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.804
margin_top = -236.566
margin_right = -131.804
margin_bottom = -214.566
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Email"

[node name="RichTextLabel5" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.797
margin_top = -152.383
margin_right = -71.7971
margin_bottom = -130.383
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Display Name"

[node name="RichTextLabel6" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.79
margin_top = -68.2003
margin_right = -49.7898
margin_bottom = -46.2003
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Create Password"

[node name="RichTextLabel7" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.783
margin_top = 17.9874
margin_right = -43.7825
margin_bottom = 39.9874
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Confirm Password"

[node name="RichTextLabel8" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.782
margin_top = 103.987
margin_right = -43.7823
margin_bottom = 125.987
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Date of Birth"

[node name="PasswordMatchLabel" type="RichTextLabel" parent="RegisterBackground"]
visible = false
margin_left = -176.772
margin_top = 92.2443
margin_right = -48.7722
margin_bottom = 110.244
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 29 )
text = "Password must match"
script = ExtResource( 9 )

[node name="EmailValidateLabel" type="RichTextLabel" parent="RegisterBackground"]
visible = false
margin_left = -176.797
margin_top = -164.388
margin_right = -101.797
margin_bottom = -146.388
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 29 )
text = "Invalid Email"
script = ExtResource( 4 )

[node name="DoBValidateLabel" type="RichTextLabel" parent="RegisterBackground"]
visible = false
margin_left = -176.773
margin_top = 176.244
margin_right = -48.7722
margin_bottom = 194.244
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 29 )
text = "Invalid Date of Birth"
script = ExtResource( 10 )

[node name="UserExistPopUp" type="AcceptDialog" parent="RegisterBackground"]
margin_left = 17.688
margin_top = -0.00201416
margin_right = 100.688
margin_bottom = 57.998

[node name="EmailVerfication" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 76, 277 )

[node name="CreateParentAccountScene" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 76, 319 )
